2009-10-17  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Eric Carlson.

        https://bugs.webkit.org/show_bug.cgi?id=30470
        Make marking a bug as duplicate easier

        * js/field.js: (setResolutionToDuplicate): Focus the edit field, too.

2009-10-16  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=30470
        Make marking a bug as duplicate easier

        * js/field.js: (setResolutionToDuplicate): Show edit field right away, don't make the user
        click again.

2009-09-09  David Kilzer  <ddkilzer@apple.com>

        Update data/params parameters

        * data/params: Updated 'attachment_base' parameter for secure
        attachments.  Updated 'mybugstemplate' parameter to search for
        bugs in UNCONFIRMED, ASSIGNED and REOPENED status in addition to
        NEW status.

2009-08-11  David Kilzer  <ddkilzer@apple.com>

        Updated data/params parameter

        * data/params: Updated 'loginnetmask' parameter to allow users
        to choose whether their cookies are restricted to a single IP
        address or not.

2009-07-07  David Kilzer  <ddkilzer@apple.com>

        Updated BugsSite with local changes on server

        The new files were created by checksetup.pl during the upgrade
        to Bugzilla 3.2.3.  The rest are self-explanatory.

        * data: Added "bugzilla-update.xml" to svn:ignore.
        * data/attachments: Added "groups.*" to svn:ignore.
        * data/params: Updated for a few changed parameters.

        * lib/.htaccess: Added.
        * skins/contrib/Dusk/IE-fixes.css: Added.
        * skins/contrib/Dusk/admin.css: Added.
        * skins/contrib/Dusk/create_attachment.css: Added.
        * skins/contrib/Dusk/dependency-tree.css: Added.
        * skins/contrib/Dusk/duplicates.css: Added.
        * skins/contrib/Dusk/editusers.css: Added.
        * skins/contrib/Dusk/help.css: Added.
        * skins/contrib/Dusk/index.css: Added.